--- a/frontend/src/app/search-topics/search-topics.component.scss
+++ b/frontend/src/app/search-topics/search-topics.component.scss
@@ -10,3 +10,8 @@ div.current-facet-label {
 .show-all {
   cursor: pointer;
 }
+
+button {
+  width: 100%;
+  text-align: left;
+}
